application:view/controllers:clients: separate the statistics page into a menu and 4 pages.
This is a first step in having much more advanced statistics that cannot
fit in a single page.

--- a/application/views/scripts/clients/index.phtml
+++ b/application/views/scripts/clients/index.phtml
@@ -4,5 +4,5 @@
 <a class="button big" href="<?php echo $this->url(array('controller'=>'clients', 'action'=>'newresa')); ?>">Ajouter une nouvelle réservation</a>
 <a class="button big" href="<?php echo $this->url(array('controller'=>'clients', 'action'=>'liste')); ?>">Liste des réservations</a>
 <a class="button big" href="<?php echo $this->url(array('controller'=>'clients', 'action'=>'listeclients')); ?>">Liste des clients</a>
-<a class="button big" href="<?php echo $this->url(array('controller'=>'clients', 'action'=>'stats')); ?>">Statistiques</a>
+<a class="button big" href="<?php echo $this->url(array('controller'=>'clients', 'action'=>'statsmenu')); ?>">Statistiques</a>
 </div>
